src/test/ui/unused/unused-mut-warning-captured-var.stderr
error: variable does not need to be mutable
  --> $DIR/unused-mut-warning-captured-var.rs:4:9
   |
LL |     let mut x = 1;
   |         ----^
   |         |
   |         If I were you, I would simply remove this `mut`
   |
note: lint level defined here
  --> $DIR/unused-mut-warning-captured-var.rs:1:11
   |
LL | #![forbid(unused_mut)]
   |           ^^^^^^^^^^

error: aborting due to previous error

